# fastapi-orders-api

./: .dockerignore  .gitignore  LICENSE  README.md  docker-compose.yml  docker_entrypoint.sh  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: main.yml
dockerfiles/: Dockerfile.fastapi  Dockerfile.postgres
orders-api/: pyproject.toml
orders-api/orders_api/: config.py  crud.py  database.py  models.py
orders_api/: config.py  main.py  models.py  pyproject.toml  schemas.py
orders_api/app/: config.py  database.py  main.py  models.py
postgres/: create.sql
tests/: conftest.py
