[tool.poetry]
name = "orders-api"
version = "0.1.0"
description = ""
authors = ["Kelvin Ducray <kelvin.ducray@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.68.1"}
black = "^21.9b0"
requests = "^2.26.0"
pytest = "^6.2.5"
SQLAlchemy = "^1.4.23"
asyncpg = "^0.24.0"
psycopg2 = "^2.9.1"
sqlalchemy_schemadisplay = "^1.3"
email-validator = "^1.1.3"

[tool.poetry.dev-dependencies]
pytest-cov = "^2.12.1"
ERAlchemy = "^1.2.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
